tests/grammar/ansi-92/grant.test
# Syntax error expected PRIVILEGES
>GRANT ALL
Syntax error.
Expected to find PRIVILEGES but found symbol[EOS]
GRANT ALL
        ^
# Syntax error expected ON
>GRANT ALL PRIVILEGES
Syntax error.
Expected to find ON but found symbol[EOS]
GRANT ALL PRIVILEGES
                   ^
# Syntax error expected TO
>GRANT ALL PRIVILEGES ON db
Syntax error.
Expected to find TO but found symbol[EOS]
GRANT ALL PRIVILEGES ON db
                         ^
# Syntax error expected identifier or PUBLIC
>GRANT ALL PRIVILEGES ON db TO WITH GRANT
Syntax error.
Expected to find one of (<< identifier >>|PUBLIC) but found symbol[WITH]
GRANT ALL PRIVILEGES ON db TO WITH GRANT
                             ^^^^^^^^^^^
# Syntax error expected GRANT
>GRANT ALL PRIVILEGES ON db TO usr WITH
Syntax error.
Expected to find GRANT but found symbol[EOS]
GRANT ALL PRIVILEGES ON db TO usr WITH
                                     ^
# Syntax error expected OPTION
>GRANT ALL PRIVILEGES ON db TO usr WITH GRANT
Syntax error.
Expected to find OPTION but found symbol[EOS]
GRANT ALL PRIVILEGES ON db TO usr WITH GRANT
                                           ^
# GRANT all to a user, no grant option
>GRANT ALL PRIVILEGES ON db TO usr
statements:
  - type: GRANT
    grant_statement:
      on: db
      to: usr
      privileges:
        - ALL
# GRANT specific privileges to a user, no grant option
>GRANT SELECT, DELETE, USAGE ON db TO usr
statements:
  - type: GRANT
    grant_statement:
      on: db
      to: usr
      privileges:
        - SELECT
        - DELETE
        - USAGE
# GRANT privilege with action taking columns
>GRANT INSERT (a, b, c) ON tbl TO usr
statements:
  - type: GRANT
    grant_statement:
      on: tbl
      to: usr
      privileges:
        - INSERT (a,b,c)
# GRANT privilege with action taking columns along with no optional columns for
# update
>GRANT INSERT (a, b, c), UPDATE ON tbl TO usr
statements:
  - type: GRANT
    grant_statement:
      on: tbl
      to: usr
      privileges:
        - INSERT (a,b,c)
        - UPDATE
# GRANT all on domain object to a user
>GRANT ALL PRIVILEGES ON DOMAIN dom TO usr
statements:
  - type: GRANT
    grant_statement:
      on: DOMAIN dom
      to: usr
      privileges:
        - ALL
# GRANT all on collation object to a user
>GRANT ALL PRIVILEGES ON COLLATION utf8bin TO usr
statements:
  - type: GRANT
    grant_statement:
      on: COLLATION utf8bin
      to: usr
      privileges:
        - ALL
# GRANT all on characterset object to a user
>GRANT ALL PRIVILEGES ON CHARACTER SET utf8 TO usr
statements:
  - type: GRANT
    grant_statement:
      on: CHARACTER SET utf8
      to: usr
      privileges:
        - ALL
# GRANT all on translation object to a user
>GRANT ALL PRIVILEGES ON TRANSLATION trns TO usr
statements:
  - type: GRANT
    grant_statement:
      on: TRANSLATION trns
      to: usr
      privileges:
        - ALL
# Syntax error expecting SET after CHARACTER
>GRANT ALL PRIVILEGES ON CHARACTER utf8 TO usr
Syntax error.
Expected to find SET but found identifier[utf8]
GRANT ALL PRIVILEGES ON CHARACTER utf8 TO usr
                                 ^^^^^^^^^^^^
